# liveview-native-core-jetpack

./: .gitignore  README.md  build.gradle  build.gradle.kts  github.properties  jitpack.yml  settings.gradle
app/: build.gradle
core/: build.gradle  build.gradle.kts
core/src/main/java/org/phoenixframework/liveview/lib/: Attribute.kt  Document.kt  JavaResult.kt  Node.kt  NodeRef.kt
core/src/test/java/org/phoenixframework/liveview/: ExampleUnitTest.kt
core/src/test/java/org/phoenixframework/liveview_jetpack/: DocumentTest.kt  ExampleUnitTest.kt
jni_bindings/: Cargo.toml
jni_bindings/src/: lib.rs
lib/: core-release.aar
liveviewnativecorejetpack/app/src/androidTest/java/org/phoenixframework/liveview/: ExampleInstrumentedTest.kt
liveviewnativecorejetpack/gradle/wrapper/: gradle-wrapper.properties
scripts/: prepareJitpackEnvironment.sh
