[package]
name = "jni_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "liveview_native_core"
crate-type = ["cdylib"]

[dependencies]
cranelift-entity = "0.87"
jni = "0.21.0"
log = "0.4.17"
log-panics = { version = "2", features = ["with-backtrace"] }
android_logger = "0.13.1"
liveview-native-core = { git = "https://github.com/liveview-native/liveview-native-core.git" }
