[package]
name = "jni_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "liveview_native_core"
crate-type = ["cdylib"]

[dependencies]
cranelift-entity = "0.96"
jni = "0.21"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
android_logger = "0.13.3"
liveview-native-core = { git = "https://github.com/liveview-native/liveview-native-core.git", rev = "7500ce9ebc4f8e2b8db760e74f2959340e669264" }
